<resources>
    <string name="app_name">Crisis X</string>
    <string name="my_city">My City</string>
    <string name="my_google_api_key">AIzaSyAQQsv2589WkF_EJgjEH_DJH60EBonXTy8</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <string name="id">ID-123456</string>
    <string name="profile">"Profile"</string>
    <string name="name">"Lorem Ipsum"</string>
    <string name="post">"Post"</string>
    <string name="phone">"0123456789"</string>
    <string name="address1">Lorem Ipsum,</string>
    <string name="address2">Dolor Sit Amet,</string>
    <string name="address3">Consectetur Adipiscing Elit.</string>
    <string name="email">johndoe@foo.com</string>

    <string name="version">0.0.0a</string>
    <string name="changelog">Changelog</string>
    <string name="intro">Introduction</string>
    <string name="feedback">Feedback</string>

    <string name="generalsettings">General</string>
    <string name="appsettings">Application</string>
    <string name="personalsettings">Personal</string>
    <string name="address">Address</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="dae_official">DAE Official</string>
    <string name="a_citizen">A Citizen</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="username">Username</string>
    <string name="str_password">Password</string>
    <string name="btn_str_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Full Name</string>

    <string-array name="emergency_list">
        <item>Medical</item>
        <item>Police</item>
        <item>Fire</item>
        <item>Radioactive</item>
    </string-array>
</resources>
